Fixed a grammatical error in feral's description.

--- a/po/wesnoth-help/ang@latin.po
+++ b/po/wesnoth-help/ang@latin.po
@@ -3541,7 +3541,7 @@ msgstr "ƿildeu"
 
 #. [trait]: id=feral
 #: data/core/macros/traits.cfg:192
-msgid "Receive only 50% defense in land-based villages"
+msgid "Receives only 50% defense in land-based villages"
 msgstr ""
 
 #. [trait]: id=weak
