--- a/po/wesnoth-help/et.po
+++ b/po/wesnoth-help/et.po
@@ -4490,7 +4490,7 @@ msgstr "ükskõikne"
 
 #. [trait]: id=feral
 #: data/core/macros/traits.cfg:192
-msgid "Receive only 50% defense in land-based villages"
+msgid "Receives only 50% defense in land-based villages"
 msgstr ""
 
 #. [trait]: id=weak
