--- a/po/wesnoth-help/fi.po
+++ b/po/wesnoth-help/fi.po
@@ -4607,7 +4607,7 @@ msgstr "villi"
 #: data/core/macros/traits.cfg:192
 #, fuzzy
 #| msgid "Receive only 40% defense in land-based villages"
-msgid "Receive only 50% defense in land-based villages"
+msgid "Receives only 50% defense in land-based villages"
 msgstr "Saa vain 40% puolustuksen maalla sijaitsevissa kylissä"
 
 #. [trait]: id=weak
