--- a/po/wesnoth-help/id.po
+++ b/po/wesnoth-help/id.po
@@ -4827,7 +4827,7 @@ msgstr "feral wanita"
 
 #. [trait]: id=feral
 #: data/core/macros/traits.cfg:192
-msgid "Receive only 50% defense in land-based villages"
+msgid "Receives only 50% defense in land-based villages"
 msgstr "Hanya menerima 50% pertahanan di alas tanah desa-desa"
 
 #. [trait]: id=weak
