--- a/po/wesnoth-help/pt_BR.po
+++ b/po/wesnoth-help/pt_BR.po
@@ -4599,7 +4599,7 @@ msgstr ""
 #: data/core/macros/traits.cfg:192
 #, fuzzy
 #| msgid "Receive only 40% defense in land-based villages"
-msgid "Receive only 50% defense in land-based villages"
+msgid "Receives only 50% defense in land-based villages"
 msgstr "Recebe apenas 40% de defesa nas vilas"
 
 #. [trait]: id=weak
