--- a/po/wesnoth-help/ro.po
+++ b/po/wesnoth-help/ro.po
@@ -3618,7 +3618,7 @@ msgstr "neutru"
 
 #. [trait]: id=feral
 #: data/core/macros/traits.cfg:192
-msgid "Receive only 50% defense in land-based villages"
+msgid "Receives only 50% defense in land-based villages"
 msgstr ""
 
 #. [trait]: id=weak
