--- a/po/wesnoth-help/sr.po
+++ b/po/wesnoth-help/sr.po
@@ -4667,7 +4667,7 @@ msgstr "неукроћеност"
 
 #. [trait]: id=feral
 #: data/core/macros/traits.cfg:192
-msgid "Receive only 50% defense in land-based villages"
+msgid "Receives only 50% defense in land-based villages"
 msgstr "само 50% одбране у копненим селима"
 
 #. [trait]: id=weak
