--- a/po/wesnoth-help/sr@ijekavianlatin.po
+++ b/po/wesnoth-help/sr@ijekavianlatin.po
@@ -4686,7 +4686,7 @@ msgstr "neukroćenost"
 
 #. [trait]: id=feral
 #: data/core/macros/traits.cfg:192
-msgid "Receive only 50% defense in land-based villages"
+msgid "Receives only 50% defense in land-based villages"
 msgstr "samo 50% odbrane u kopnenim selima"
 
 #. [trait]: id=weak
