--- a/po/wesnoth-help/sv.po
+++ b/po/wesnoth-help/sv.po
@@ -4798,7 +4798,7 @@ msgstr "vild"
 
 #. [trait]: id=feral
 #: data/core/macros/traits.cfg:192
-msgid "Receive only 50% defense in land-based villages"
+msgid "Receives only 50% defense in land-based villages"
 msgstr "Får bara 50% terrängförsvar i byar på land."
 
 #. [trait]: id=weak
