--- a/po/wesnoth-help/af.po
+++ b/po/wesnoth-help/af.po
@@ -4385,7 +4385,7 @@ msgstr "Uitvaagsel"
 
 #. [trait]: id=feral
 #: data/core/macros/traits.cfg:192
-msgid "Receive only 50% defense in land-based villages"
+msgid "Receives only 50% defense in land-based villages"
 msgstr ""
 
 #. [trait]: id=weak
