--- a/po/wesnoth-help/ar.po
+++ b/po/wesnoth-help/ar.po
@@ -3540,7 +3540,7 @@ msgstr ""
 
 #. [trait]: id=feral
 #: data/core/macros/traits.cfg:192
-msgid "Receive only 50% defense in land-based villages"
+msgid "Receives only 50% defense in land-based villages"
 msgstr ""
 
 #. [trait]: id=weak
