--- a/po/wesnoth-help/bg.po
+++ b/po/wesnoth-help/bg.po
@@ -4565,7 +4565,7 @@ msgstr "немъртва"
 
 #. [trait]: id=feral
 #: data/core/macros/traits.cfg:192
-msgid "Receive only 50% defense in land-based villages"
+msgid "Receives only 50% defense in land-based villages"
 msgstr ""
 
 #. [trait]: id=weak
