--- a/po/wesnoth-help/ca.po
+++ b/po/wesnoth-help/ca.po
@@ -4497,7 +4497,7 @@ msgstr "neutral"
 
 #. [trait]: id=feral
 #: data/core/macros/traits.cfg:192
-msgid "Receive only 50% defense in land-based villages"
+msgid "Receives only 50% defense in land-based villages"
 msgstr ""
 
 #. [trait]: id=weak
