--- a/po/wesnoth-help/cs.po
+++ b/po/wesnoth-help/cs.po
@@ -4623,7 +4623,7 @@ msgstr "divá"
 
 #. [trait]: id=feral
 #: data/core/macros/traits.cfg:192
-msgid "Receive only 50% defense in land-based villages"
+msgid "Receives only 50% defense in land-based villages"
 msgstr "V pozemních vesnicích získává obranu pouze 50%"
 
 #. [trait]: id=weak
