--- a/po/wesnoth-help/en@shaw.po
+++ b/po/wesnoth-help/en@shaw.po
@@ -4444,7 +4444,7 @@ msgstr "𐑯𐑵𐑑𐑮𐑩𐑤"
 
 #. [trait]: id=feral
 #: data/core/macros/traits.cfg:192
-msgid "Receive only 50% defense in land-based villages"
+msgid "Receives only 50% defense in land-based villages"
 msgstr ""
 
 #. [trait]: id=weak
