--- a/po/wesnoth-help/eo.po
+++ b/po/wesnoth-help/eo.po
@@ -4406,7 +4406,7 @@ msgstr "nemortinta"
 
 #. [trait]: id=feral
 #: data/core/macros/traits.cfg:192
-msgid "Receive only 50% defense in land-based villages"
+msgid "Receives only 50% defense in land-based villages"
 msgstr ""
 
 #. [trait]: id=weak
