--- a/po/wesnoth-help/ga.po
+++ b/po/wesnoth-help/ga.po
@@ -3601,7 +3601,7 @@ msgstr "fiáin"
 
 #. [trait]: id=feral
 #: data/core/macros/traits.cfg:192
-msgid "Receive only 50% defense in land-based villages"
+msgid "Receives only 50% defense in land-based villages"
 msgstr ""
 
 #. [trait]: id=weak
