--- a/po/wesnoth-help/gl.po
+++ b/po/wesnoth-help/gl.po
@@ -4848,7 +4848,7 @@ msgstr "feroz"
 
 #. [trait]: id=feral
 #: data/core/macros/traits.cfg:192
-msgid "Receive only 50% defense in land-based villages"
+msgid "Receives only 50% defense in land-based villages"
 msgstr "Só recibe unha defensa do 50% nas vilas terrestres."
 
 #. [trait]: id=weak
