--- a/po/wesnoth-help/he.po
+++ b/po/wesnoth-help/he.po
@@ -4403,7 +4403,7 @@ msgstr "ניטרלי"
 
 #. [trait]: id=feral
 #: data/core/macros/traits.cfg:192
-msgid "Receive only 50% defense in land-based villages"
+msgid "Receives only 50% defense in land-based villages"
 msgstr ""
 
 #. [trait]: id=weak
