--- a/po/wesnoth-help/hr.po
+++ b/po/wesnoth-help/hr.po
@@ -3662,7 +3662,7 @@ msgstr "Vodstvo"
 
 #. [trait]: id=feral
 #: data/core/macros/traits.cfg:192
-msgid "Receive only 50% defense in land-based villages"
+msgid "Receives only 50% defense in land-based villages"
 msgstr ""
 
 #. [trait]: id=weak
