--- a/po/wesnoth-help/hu.po
+++ b/po/wesnoth-help/hu.po
@@ -4646,7 +4646,7 @@ msgstr "semleges"
 
 #. [trait]: id=feral
 #: data/core/macros/traits.cfg:192
-msgid "Receive only 50% defense in land-based villages"
+msgid "Receives only 50% defense in land-based villages"
 msgstr ""
 
 #. [trait]: id=weak
