--- a/po/wesnoth-help/ja.po
+++ b/po/wesnoth-help/ja.po
@@ -4492,7 +4492,7 @@ msgstr "野生"
 
 #. [trait]: id=feral
 #: data/core/macros/traits.cfg:192
-msgid "Receive only 50% defense in land-based villages"
+msgid "Receives only 50% defense in land-based villages"
 msgstr "陸にある村では防御が 50% になってしまいます"
 
 #. [trait]: id=weak
