--- a/po/wesnoth-help/la.po
+++ b/po/wesnoth-help/la.po
@@ -4427,7 +4427,7 @@ msgstr "fera"
 
 #. [trait]: id=feral
 #: data/core/macros/traits.cfg:192
-msgid "Receive only 50% defense in land-based villages"
+msgid "Receives only 50% defense in land-based villages"
 msgstr ""
 
 #. [trait]: id=weak
