--- a/po/wesnoth-help/lt.po
+++ b/po/wesnoth-help/lt.po
@@ -4392,7 +4392,7 @@ msgstr "laukinė"
 
 #. [trait]: id=feral
 #: data/core/macros/traits.cfg:192
-msgid "Receive only 50% defense in land-based villages"
+msgid "Receives only 50% defense in land-based villages"
 msgstr "Gauna tik 50% gynybą sausumos kaimuose"
 
 #. [trait]: id=weak
