--- a/po/wesnoth-help/lv.po
+++ b/po/wesnoth-help/lv.po
@@ -4718,7 +4718,7 @@ msgstr "savvaļas"
 
 #. [trait]: id=feral
 #: data/core/macros/traits.cfg:192
-msgid "Receive only 50% defense in land-based villages"
+msgid "Receives only 50% defense in land-based villages"
 msgstr "Saņem tikai 50% aizsardzību uz zemes esošos ciemos"
 
 #. [trait]: id=weak
