--- a/po/wesnoth-help/nb_NO.po
+++ b/po/wesnoth-help/nb_NO.po
@@ -4412,7 +4412,7 @@ msgstr "Overfallskvinne"
 
 #. [trait]: id=feral
 #: data/core/macros/traits.cfg:192
-msgid "Receive only 50% defense in land-based villages"
+msgid "Receives only 50% defense in land-based villages"
 msgstr ""
 
 #. [trait]: id=weak
