--- a/po/wesnoth-help/pl.po
+++ b/po/wesnoth-help/pl.po
@@ -4619,7 +4619,7 @@ msgstr "neutralna"
 
 #. [trait]: id=feral
 #: data/core/macros/traits.cfg:192
-msgid "Receive only 50% defense in land-based villages"
+msgid "Receives only 50% defense in land-based villages"
 msgstr ""
 
 #. [trait]: id=weak
