--- a/po/wesnoth-help/ru.po
+++ b/po/wesnoth-help/ru.po
@@ -4472,7 +4472,7 @@ msgstr "дикая"
 
 #. [trait]: id=feral
 #: data/core/macros/traits.cfg:192
-msgid "Receive only 50% defense in land-based villages"
+msgid "Receives only 50% defense in land-based villages"
 msgstr "Получает только 50% защиты в деревнях"
 
 #. [trait]: id=weak
