--- a/po/wesnoth-help/sl.po
+++ b/po/wesnoth-help/sl.po
@@ -4430,7 +4430,7 @@ msgstr "nevtralna"
 
 #. [trait]: id=feral
 #: data/core/macros/traits.cfg:192
-msgid "Receive only 50% defense in land-based villages"
+msgid "Receives only 50% defense in land-based villages"
 msgstr ""
 
 #. [trait]: id=weak
