--- a/po/wesnoth-help/tl.po
+++ b/po/wesnoth-help/tl.po
@@ -3657,7 +3657,7 @@ msgstr "malusog"
 
 #. [trait]: id=feral
 #: data/core/macros/traits.cfg:192
-msgid "Receive only 50% defense in land-based villages"
+msgid "Receives only 50% defense in land-based villages"
 msgstr ""
 
 #. [trait]: id=weak
