--- a/po/wesnoth-help/tr.po
+++ b/po/wesnoth-help/tr.po
@@ -4544,7 +4544,7 @@ msgstr "tarafsız"
 
 #. [trait]: id=feral
 #: data/core/macros/traits.cfg:192
-msgid "Receive only 50% defense in land-based villages"
+msgid "Receives only 50% defense in land-based villages"
 msgstr ""
 
 #. [trait]: id=weak
