--- a/po/wesnoth-help/vi.po
+++ b/po/wesnoth-help/vi.po
@@ -4545,7 +4545,7 @@ msgstr "hoang dã"
 
 #. [trait]: id=feral
 #: data/core/macros/traits.cfg:192
-msgid "Receive only 50% defense in land-based villages"
+msgid "Receives only 50% defense in land-based villages"
 msgstr ""
 
 #. [trait]: id=weak
