--- a/po/wesnoth-help/zh_TW.po
+++ b/po/wesnoth-help/zh_TW.po
@@ -4275,7 +4275,7 @@ msgstr "中立"
 
 #. [trait]: id=feral
 #: data/core/macros/traits.cfg:192
-msgid "Receive only 50% defense in land-based villages"
+msgid "Receives only 50% defense in land-based villages"
 msgstr ""
 
 #. [trait]: id=weak
