updated Chinese (Simplified) translation

--- a/po/wesnoth-help/zh_CN.po
+++ b/po/wesnoth-help/zh_CN.po
@@ -13,7 +13,7 @@ msgstr ""
 "Project-Id-Version: wesnoth-1.10\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-12-19 15:14+0100\n"
-"PO-Revision-Date: 2011-11-14 21:39+0800\n"
+"PO-Revision-Date: 2011-12-30 18:34+0800\n"
 "Last-Translator: CloudiDust <cloudidust@gmail.com>\n"
 "Language-Team: Chinese Simplified <http://code.google.com/p/wesnoth-"
 "translation-cn>\n"
@@ -62,7 +62,7 @@ msgid ""
 "ability of the unit being attacked."
 msgstr ""
 "魔法：\n"
-"本攻击无视被攻击单位的防御能力，而总是具有70%的命中率。"
+"本攻击无视被攻击单位的闪避能力，而总是具有70%的命中率。"
 
 #. [firststrike]: id=firststrike
 #: data/campaigns/Under_the_Burning_Suns/scenarios/03_Stirring_in_the_Night.cfg:850
@@ -582,7 +582,7 @@ msgid ""
 "text='Recorder'</ref> vocation."
 msgstr ""
 "龙人的书面语。由<ref>dst='recorder' text='记录者'</ref>这一职阶的成员们书写在"
-"陶瓷片上。"
+"<ref>dst='ceramic' text='陶瓷'</ref>版上。"
 
 #. [topic]: id=drakish_language
 #: data/core/encyclopedia/drakes.cfg:187
@@ -1308,7 +1308,7 @@ msgstr ""
 "可能需要为您的部队征募<ref>dst='..units' text='单位'</ref>。要想征募单位，您"
 "的领袖（例如<italic>text='王座之承'</italic>战役中的科纳德）必须位于"
 "<ref>dst='terrain_castle' text='城堡'</ref>的主楼上。而后您将可以在菜单中选"
-"择 <bold>text='征募'</bold>或右键点击城堡内的一个格子并选择<bold>text='征"
+"择 <bold>text='征募'</bold>或右键点击城堡内的一个六角格并选择<bold>text='征"
 "募'</bold>。此时会弹出征募菜单，其中列出了所有可以征募的单位和所需金币数。点"
 "击一个单位可以查看其能力数据，然后点击征募按钮就可将其征募。"
 
@@ -1324,9 +1324,9 @@ msgid ""
 msgstr ""
 "\n"
 "\n"
-"如果您是右击城堡里的格子后选择征募的，那么新的单位将出现在该格内。否则，新兵"
-"将出现在主楼旁的某一个空地块里。您最多只能征募与城堡内空格数相同个数的单位，"
-"并且在招募时，您的总花费却不能超出您所拥有的金币数量。"
+"如果您是右击城堡里的六角格后选择征募的，那么新的单位将出现在该格内。否则，新"
+"兵将出现在主楼旁的某一个空地块里。您最多只能征募与城堡内空格数相同个数的单"
+"位，并且在招募时，您的总花费却不能超出您所拥有的金币数量。"
 
 #. [topic]: id=recruit_and_recall
 #: data/core/help.cfg:167
@@ -1472,12 +1472,13 @@ msgid ""
 msgstr ""
 "<italic>text='韦诺之战'</italic>中单位的移动很简单。只需点击选中您想要移动的"
 "单位，再点击目的地就行了。当单位被选中时，该单位在本回合可移动的范围就会以高"
-"亮显示，而本回合无法到达的区域则会暗下去。移动鼠标到高亮显示的格子里，该单位"
-"在目的地的防御率便会显示出来。移动鼠标到暗格子上还会显示要到达那里所需的回合"
-"数，点击该格子会让单位以最佳的路线移动，并在接下来的几回合中到达目的地。如果"
-"您没有用完本回合中某单位所有的移动点数，则还可以继续移动他。当您要交换两个单"
-"位的位置时，这是很有用的。如果命令单位进行攻击，则将耗尽他的移动点数。当单位"
-"进入一个您还没有占领的村庄时也会耗尽所有的移动点数，但他仍然能够攻击。"
+"亮显示，而本回合无法到达的区域则会暗下去。移动鼠标到高亮显示的六角格里，该单"
+"位在目的地的闪避率便会显示出来。移动鼠标到暗六角格上还会显示要到达那里所需的"
+"回合数，点击该六角格会让单位以最佳的路线移动，并在接下来的几回合中到达目的"
+"地。如果您没有用完本回合中某单位所有的移动点数，则还可以继续移动他。当您要交"
+"换两个单位的位置时，这是很有用的。如果命令单位进行攻击，则将耗尽他的移动点"
+"数。当单位进入一个您还没有占领的村庄时也会耗尽所有的移动点数，但他仍然能够攻"
+"击。"
 
 #. [topic]: id=movement
 #: data/core/help.cfg:207
@@ -1496,11 +1497,11 @@ msgid ""
 msgstr ""
 "\n"
 "\n"
-"每个单位都有一定的移动点数，这些点数将在移动到新的格子中时被消耗掉，其消耗量"
-"取决于目标格的地形。例如，进入草地几乎总是耗费1点移动点数。进入特定格子所耗费"
-"的移动点数取决于单位种类——在森林里，精灵族单位只需花费1点移动点数，绝大多数人"
-"类和兽人单位花费2点，而骑兵则要花费3点。如要获悉某个单位进入某个地形所需的移"
-"动点数，只需右击该单位，选择<bold>text='单位描述'</bold>，然后阅读"
+"每个单位都有一定的移动点数，这些点数将在移动到新的六角格中时被消耗掉，其消耗"
+"量取决于目标格的地形。例如，进入草地几乎总是耗费1点移动点数。进入特定六角格所"
+"耗费的移动点数取决于单位种类——在森林里，精灵族单位只需花费1点移动点数，绝大多"
+"数人类和兽人单位花费2点，而骑兵则要花费3点。如要获悉某个单位进入某个地形所需"
+"的移动点数，只需右击该单位，选择<bold>text='单位描述'</bold>，然后阅读"
 "<bold>text='地形影响'</bold>部分。"
 
 #. [topic]: id=movement
@@ -1519,8 +1520,8 @@ msgstr ""
 "\n"
 "\n"
 "移动时，您还需要记住<italic>text='控制区域'</italic>的概念。每个单位都会在紧"
-"邻自身的格子中产生控制区域，敌军若进入那些格子，将立即无法继续移动。学习如何"
-"利用控制区域，是玩韦诺时的一个重点。只有<ref>dst='ability_skirmisher' "
+"邻自身的六角格中产生控制区域，敌军若进入那些六角格，将立即无法继续移动。学习"
+"如何利用控制区域，是玩韦诺时的一个重点。只有<ref>dst='ability_skirmisher' "
 "text='游击士'</ref>可以忽略控制区域的影响。"
 
 #. [topic]: id=movement
@@ -1572,7 +1573,7 @@ msgstr ""
 "位，以及村庄的归属（除了属于您或者您的盟友的村庄之外）。当迷雾附近有您的单位"
 "时，它会暂时消失，而当他们离去后则会再次笼罩。黑幕和迷雾都可以被单位所清除。"
 "单位清除黑幕或迷雾的范围，是其在一回合内可以移动到的区域，再加上与这一区域紧"
-"临的一圈格子（忽略控制区域和敌方单位的影响）。\n"
+"临的一圈六角格（忽略控制区域和敌方单位的影响）。\n"
 "\n"
 "通常您可以撤销单位的移动，只要没有发生会产生随机结果的事件即可，比如战斗和征"
 "募（绝大多数单位被征募时都会获得随机的特质）。为了探索被隐藏的地形而清除黑幕"
@@ -1602,8 +1603,8 @@ msgid ""
 msgstr ""
 "<italic>text='韦诺之战'</italic>中的战斗总是发生在相邻的两个单位之间。点击您"
 "的单位，然后再点击您想攻击的敌人：您的单位会向敌人移动，当两个单位相邻时，战"
-"斗就会开始。进攻者和防御者交替攻击对方，直到都用完被分配的攻击次数为止。进攻"
-"者选择一种武器进行攻击，而防御者会使用相同种类的武器进行防御。攻击类型有两"
+"斗就会开始。进攻方和防御方交替攻击对方，直到都用完被分配的攻击次数为止。进攻"
+"方选择一种武器进行攻击，而防御方会使用相同种类的武器进行防御。攻击类型有两"
 "种：<italic>text='近战'</italic>，使用的武器通常包括剑，斧，或者利齿；"
 "<italic>text='远程'</italic>，使用的武器通常包括弓，矛以及火球。"
 
@@ -1633,7 +1634,7 @@ msgid ""
 msgstr ""
 "\n"
 "\n"
-"进攻者率先进行攻击，然后防御者反击。每次攻击要么命中，造成一定的伤害，要么击"
+"进攻方率先进行攻击，然后防御方反击。每次攻击要么命中，造成一定的伤害，要么击"
 "偏，完全不造成伤害。攻击将反复轮流进行，直到双方都用尽其攻击次数为止。单位拥"
 "有的攻击次数是不同的：例如，具有5–4攻击力的精灵战士可以攻击4次，每次命中敌人"
 "将造成5点伤害，而具有9–2攻击力的兽人步兵只能攻击2次（但每次命中敌人会造成9点"
@@ -1667,9 +1668,9 @@ msgstr ""
 "\n"
 "根据其所处的<italic>text='地形'</italic>，每个单位都有一定的几率被命中。这在"
 "状态面板上会有显示。也可以右击单位，选择<bold>text='单位描述'</bold>，而后查"
-"看<bold>text='地形影响'</bold>的内容。例如，许多精灵在森林里都有70%的防御率，"
-"这表示进攻者只有30%的几率命中目标。同样地，精灵在反击中命中进攻者的几率取决于"
-"进攻者所处的地形。"
+"看<bold>text='地形影响'</bold>的内容。例如，许多精灵在森林里都有70%的闪避率，"
+"这表示进攻方只有30%的几率命中目标。同样地，精灵在反击中命中进攻方的几率取决于"
+"进攻方所处的地形。"
 
 #. [topic]: id=combat
 #: data/core/help.cfg:239
@@ -1736,7 +1737,7 @@ msgstr ""
 "\n"
 "有些单位拥有特别的<ref>dst='..abilities_section' text='技能'</ref>，会影响在"
 "战斗中的伤害输出。最常见的能力是<ref>dst='weaponspecial_charge' text='冲锋'</"
-"ref>，当具有冲锋技能的单位进攻时，进攻者和防御者都将输出双倍伤害。"
+"ref>，当具有冲锋技能的单位进攻时，进攻方和防御方都将输出双倍伤害。"
 
 #. [topic]: id=damage_types_and_resistance
 #: data/core/help.cfg:251
@@ -1800,7 +1801,7 @@ msgid ""
 msgstr ""
 "\n"
 "\n"
-"如果某次攻击命中，则至少会造成1点伤害，即使防御者对其伤害类型有100%的抗性时也"
+"如果某次攻击命中，则至少会造成1点伤害，即使防御方对其伤害类型有100%的抗性时也"
 "是如此。"
 
 #. [topic]: id=time_of_day
@@ -2292,7 +2293,7 @@ msgstr ""
 "\n"
 "\n"
 "坚韧单位在战役的整个阶段中都非常有用，并且这是一个对所有单位都有用的特质。坚"
-"韧特质对拥有较低的生命值、较高的防御能力或较高抗性的单位特别有帮助。坚韧单位"
+"韧特质对拥有较低的生命值、较高的闪避能力或较高抗性的单位特别有帮助。坚韧单位"
 "在把守战略要害部位方面尤其有用。"
 
 #. [topic]: id=traits_strong
@@ -2349,7 +2350,7 @@ msgid ""
 "of base terrain."
 msgstr ""
 "对低智商的野生生物而言，智慧生物的居所并不能很容易地作为自己的掩护。因此，"
-"<italic>text='野生'</italic>单位在任何一个陆地村庄中都只能获得最高50%的防御"
+"<italic>text='野生'</italic>单位在任何一个陆地村庄中都只能获得最高50%的闪避"
 "率，而不论其下的地形如何。"
 
 #. [topic]: id=traits_loyal
@@ -2610,7 +2611,7 @@ msgid ""
 "\n"
 msgstr ""
 "游戏地图中包含了许多不同的地形，这些地形既能影响单位的移动，也能影响单位在战"
-"斗中的防御能力。\n"
+"斗中的闪避能力。\n"
 "\n"
 
 #. [topic]: id=terrain_flat
@@ -2634,7 +2635,7 @@ msgstr ""
 "御。一般来说，最适合草原作战的单位是骑兵，或能够有效利用开阔地带的敏捷单"
 "位。\n"
 "\n"
-"绝大多数单位在草原上有30%到40%的防御率。"
+"绝大多数单位在草原上有30%到40%的闪避率。"
 
 #. [topic]: id=terrain_road
 #: data/core/help.cfg:506
@@ -2681,11 +2682,11 @@ msgstr ""
 "阻碍单位通过。虽然减慢了几乎所有兵种的移动速度，但是森林所能提供的保护确实比"
 "开阔地带好。然而，骑兵在森林里行进实在是艰难，以至于隐秘行动带来的一点点优势"
 "也就此化为乌有。这些通用的规则对精灵却不适用，丛林不仅不影响他们的移动速度，"
-"还带来可观的防御加成。矮人是另一种例外，虽然他们奋力穿越森林时速度不受什么影"
-"响，但是完全不熟悉地形导致他们得不到任何防御加成。\n"
+"还带来可观的闪避加成。矮人是另一种例外，虽然他们奋力穿越森林时速度不受什么影"
+"响，但是完全不熟悉地形导致他们得不到任何闪避加成。\n"
 "\n"
-"绝大多数单位在森林中有50%的防御率，但骑兵仅仅有30%。另一方面，精灵则享有60%到"
-"70%的防御率，甚至连他们的骑兵也是如此。矮人在森林中的防御率通常只有30%。\n"
+"绝大多数单位在森林中有50%的闪避率，但骑兵仅仅有30%。另一方面，精灵则享有60%到"
+"70%的闪避率，甚至连他们的骑兵也是如此。矮人在森林中的闪避率通常只有30%。\n"
 "\n"
 
 #. [topic]: id=terrain_hills
@@ -2712,7 +2713,7 @@ msgstr ""
 "度不受影响。骑兵在丘陵中行进艰难，掩体提供的那一点点防御优势也因此化为乌"
 "有。\n"
 "\n"
-"绝大多数单位在丘陵上有大约50%的防御率，不过骑兵被限制在40%，而矮人却享有"
+"绝大多数单位在丘陵上有大约50%的闪避率，不过骑兵被限制在40%，而矮人却享有"
 "60%。\n"
 
 #. [topic]: id=terrain_mountains
@@ -2734,11 +2735,11 @@ msgid ""
 "Most units receive about 60% defense in mountains, whereas Dwarves enjoy 70%."
 msgstr ""
 "<italic>text='山脉'</italic>很陡峭，部队有时不得不攀过种种障碍才能前进。正因"
-"为如此，山脉对大部分部队的防御有可观的加成，但也严重阻碍他们由此通过。大多数"
+"为如此，山脉对大部分部队的闪避有可观的加成，但也严重阻碍他们由此通过。大多数"
 "骑兵根本无法进入山脉；然而，精灵骑兵是个例外，地精狼骑士也是一样。矮人和巨魔"
 "是山区的土著，因此可以畅通无阻。\n"
 "\n"
-"绝大多数单位在山脉中有60%的防御率，而矮人则享有70%。"
+"绝大多数单位在山脉中有60%的闪避率，而矮人则享有70%。"
 
 #. [topic]: id=terrain_swamp_water
 #: data/core/help.cfg:559
@@ -2758,11 +2759,11 @@ msgid ""
 "all generally enjoy 60%."
 msgstr ""
 "<italic>text='沼泽'</italic>代表的是所有类型的湿地地貌，几乎所有单位在沼泽里"
-"速度都会下降，防御也会降低。不过，任何天生适应水中环境的种族都是例外：他们能"
-"在沼泽里全速移动，还能获得防御加成。那些生活在湿地里的生物也能将其化为天然的"
-"防御掩体。\n"
+"速度都会下降，闪避能力也会降低。不过，任何天生适应水中环境的种族都是例外：他"
+"们能在沼泽里全速移动，还能获得闪避加成。那些生活在湿地里的生物也能将其化为天"
+"然的防御掩体。\n"
 "\n"
-"绝大多数单位在沼泽中有30%的防御率。人鱼，娜迦和蜥蜴人通常则享有60%。"
+"绝大多数单位在沼泽中有30%的闪避率。人鱼，娜迦和蜥蜴人通常则享有60%。"
 
 #. [topic]: id=terrain_shallow_water
 #: data/core/help.cfg:571
@@ -2786,9 +2787,9 @@ msgstr ""
 "<italic>text='浅水'</italic>代表的是所有齐腰深的水域。这已经足够减慢几乎所有"
 "单位的速度，并让他们暴露在敌人的攻击之下。水面几乎会没过矮人的头顶，这让他们"
 "非常难受。那些天生会游泳的种族则是例外，他们在浅水里能全速移动，还能获得可观"
-"的防御加成。\n"
+"的闪避加成。\n"
 "\n"
-"绝大多数单位在浅水中有20%到30%的防御率，而娜迦和人鱼则都享有60%。"
+"绝大多数单位在浅水中有20%到30%的闪避率，而娜迦和人鱼则都享有60%。"
 
 #. [topic]: id=terrain_deep_water
 #: data/core/help.cfg:583
@@ -2807,7 +2808,7 @@ msgstr ""
 "<italic>text='深水'</italic>代表的是所有能没过成人头顶的水域。大多数单位不能"
 "进入深水。这是那些能够飞行或游泳技术高超的单位的领地。\n"
 "\n"
-"人鱼和娜迦在深水中都有50%的防御率，并且能全速移动。"
+"人鱼和娜迦在深水中都有50%的闪避率，并且能全速移动。"
 
 #. [topic]: id=terrain_frozen
 #: data/core/help.cfg:595
@@ -2828,7 +2829,7 @@ msgstr ""
 "由于雪的影响而减慢行进速度，并很难有效地进行自我防御。还要注意的是即使是能在"
 "水下呼吸的单位，也不能在冰下游泳。\n"
 "\n"
-"绝大多数单位在冻原上有20%到40%的防御率。"
+"绝大多数单位在冻原上有20%到40%的闪避率。"
 
 #. [topic]: id=terrain_castle
 #: data/core/help.cfg:607
@@ -2849,11 +2850,11 @@ msgid ""
 "\n"
 msgstr ""
 "<italic>text='城堡'</italic>指的是所有形式的永久性防御建筑。几乎所有驻扎在城"
-"堡内的单位都会获得可观的防御加成，并能全速移动。城堡的防御能力在于驻扎其中的"
-"单位，只要有一个城墙格子中没有单位，敌人就能很轻易地溜进城堡，与城堡中的守军"
-"获得相同的防御加成。\n"
+"堡内的单位都会获得可观的闪避加成，并能全速移动。城堡的防御能力在于驻扎其中的"
+"单位，只要有一个城墙六角格中没有单位，敌人就能很轻易地溜进城堡，与城堡中的守"
+"军获得相同的闪避加成。\n"
 "\n"
-"绝大多数单位在城堡中有大约60%的防御率。\n"
+"绝大多数单位在城堡中有大约60%的闪避率。\n"
 "\n"
 
 #. [topic]: id=terrain_sand
@@ -2875,7 +2876,7 @@ msgstr ""
 "攻击。相反地，那些长着大脚或蛇形身躯的类蜥蜴单位则能在沙地里相当自由的移"
 "动。\n"
 "\n"
-"绝大多数单位在沙地上将获得20%到40%的防御率。"
+"绝大多数单位在沙地上将获得20%到40%的闪避率。"
 
 #. [topic]: id=terrain_desert
 #: data/core/help.cfg:635
@@ -2916,7 +2917,7 @@ msgstr ""
 "以越过许多别的种族无法越过的障碍。有时洞穴也会被"
 "<ref>dst='terrain_illuminated_cave' text='照亮'</ref>。\n"
 "\n"
-"绝大多数单位在洞穴中有20%到40%的防御率，而矮人则拥有50%。"
+"绝大多数单位在洞穴中有20%到40%的闪避率，而矮人则拥有50%。"
 
 #. [topic]: id=terrain_rockbound_cave
 #: data/core/help.cfg:657
@@ -2940,11 +2941,11 @@ msgid ""
 msgstr ""
 "<italic>text='岩石洞穴'</italic>这种地形是由携带腐蚀性颗粒的水和风的侵蚀而形"
 "成的。它类似于凹凸不平的地下洞穴，降低了大部分单位在其中的移动效率，但却会提"
-"升防御能力。矮人和巨魔是洞穴中的主要定居者，因而穿行于这类地形之中也相对容易"
-"一些。凭借自身矮小的特点，矮人在这类地形中穿行时占尽优势。有时洞穴也会被"
-"<ref>dst='terrain_illuminated_cave' text='照亮'</ref>.\n"
+"升防御（闪避）能力。矮人和巨魔是洞穴中的主要定居者，因而穿行于这类地形之中也"
+"相对容易一些。凭借自身矮小的特点，矮人在这类地形中穿行时占尽优势。有时洞穴也"
+"会被<ref>dst='terrain_illuminated_cave' text='照亮'</ref>.\n"
 "\n"
-"绝大多数单位在岩石洞穴中有50%的防御率，骑兵被限制在40%，而矮人则享有60%。"
+"绝大多数单位在岩石洞穴中有50%的闪避率，骑兵被限制在40%，而矮人则享有60%。"
 
 #. [topic]: id=terrain_illuminated_cave
 #: data/core/help.cfg:669
@@ -2989,7 +2990,7 @@ msgstr ""
 "了自由移动的能力。亡灵单位自然而然地对腐烂感到亲切，所以他们在蘑菇林里的表现"
 "也很不错。\n"
 "\n"
-"绝大多数单位在蘑菇林中的防御率在50%至60%之间，而骑兵则只有20%。"
+"绝大多数单位在蘑菇林中的闪避率在50%至60%之间，而骑兵则只有20%。"
 
 #. [topic]: id=terrain_village
 #: data/core/help.cfg:691
@@ -3011,11 +3012,11 @@ msgid ""
 "\n"
 msgstr ""
 "<italic>text='村庄'</italic>指的是人类或其它种族的建筑群。几乎所有单位，甚至"
-"骑兵，都能很轻易地通过村庄。并且绝大多数单位在驻扎于村庄里时都会获得防御加"
+"骑兵，都能很轻易地通过村庄。并且绝大多数单位在驻扎于村庄里时都会获得闪避加"
 "成。村庄会提供给各个单位用于清洗和包扎伤口的资源，使得驻扎在内的单位每回合回"
 "复8点生命值，或治愈中毒状态。\n"
 "\n"
-"绝大多数单位在村庄里有50%到60%的防御率，而骑兵则只有40%。\n"
+"绝大多数单位在村庄里有50%到60%的闪避率，而骑兵则只有40%。\n"
 "\n"
 
 #. [topic]: id=terrain_water_village
@@ -3041,7 +3042,7 @@ msgstr ""
 "这里也会为任何生灵提供治愈创伤的设施。驻扎于此的单位每回合可以回复8点生命值，"
 "或治愈中毒状态。\n"
 "\n"
-"人鱼和娜迦在水下村庄里有60%的防御率，然而以陆地为家的单位通常只能得到较低程度"
+"人鱼和娜迦在水下村庄里有60%的闪避率，然而以陆地为家的单位通常只能得到较低程度"
 "的保护。"
 
 #. [topic]: id=terrain_unwalkable
@@ -3099,7 +3100,7 @@ msgid ""
 msgstr ""
 "有时河流正好特别浅，陆地单位可以不费吹灰之力地通过。此外，最适应于游泳的生物"
 "甚至在河流的这一部分里都能全速移动。就游戏规则而言，河滩相当于草原或者浅水，"
-"游戏会自动选择对其上单位的防御和移动加成最明显的一种。"
+"游戏会自动选择对其上单位的闪避和移动加成最明显的一种。"
 
 #. [topic]: id=terrain_reef
 #: data/core/help.cfg:749
@@ -3117,9 +3118,10 @@ msgid ""
 "Mermen and Naga both receive 70% defense on coastal reefs."
 msgstr ""
 "<italic>text='礁石'</italic>是由石头，珊瑚和泥沙组成的浅滩。这为大部分陆地单"
-"位提供比浅水更好的支撑和防御。同时也为绝大多数水生种族提供特别高的防御。\n"
+"位提供比浅水更好的支撑和闪避能力。同时也为绝大多数水生种族提供特别高的闪避"
+"率。\n"
 "\n"
-"人鱼和娜迦在礁石上都有70%的防御率。"
+"人鱼和娜迦在礁石上都有70%的闪避率。"
 
 #. [topic]: id=terrain_bridge
 #: data/core/help.cfg:761
@@ -3146,8 +3148,8 @@ msgstr ""
 "奢侈地让双脚保持干燥——在寒冷的季节把脚弄湿了可不是开玩笑的事。\n"
 "\n"
 "无论是对适应陆路还是对适应水路的单位来说，桥梁都是最好的地形——就游戏规则而"
-"言，桥可以视为草原或者其下的水域，游戏会自动选择对占据此格之单位的移动和防御"
-"加成最明显的一种。注意，游泳单位和陆地单位不能同时占据同一个桥梁格子。"
+"言，桥可以视为草原或者其下的水域，游戏会自动选择对占据此格之单位的移动和闪避"
+"加成最明显的一种。注意，游泳单位和陆地单位不能同时占据同一个桥梁六角格。"
 
 #. [topic]: id=terrain_impassable
 #: data/core/help.cfg:774
@@ -3430,7 +3432,7 @@ msgid ""
 "\n"
 msgstr ""
 "\n"
-"在所选的格子中创建指定类型的单位。\n"
+"在所选的六角格中创建指定类型的单位。\n"
 "\n"
 
 #. [topic]: id=debug_commands
@@ -3829,7 +3831,7 @@ msgid ""
 "incapacitated (turned to stone or otherwise paralyzed)."
 msgstr ""
 "背刺：\n"
-"在用于进攻时，如果目标的另一面（与进攻者相对）紧邻着与目标敌对的单位，且该单"
+"在用于进攻时，如果目标的另一面（与进攻方相对）紧邻着与目标敌对的单位，且该单"
 "位具有战斗力（例如，没有被石化或者用别的方式麻痹）时，本攻击将造成双倍伤害。"
 
 #. [plague]: id=plague({TYPE}), type={TYPE}
@@ -4439,7 +4441,7 @@ msgstr "野生"
 #. [trait]: id=feral
 #: data/core/macros/traits.cfg:192
 msgid "Receives only 50% defense in land-based villages"
-msgstr "在陆地村庄里只能拥有50%的防御率"
+msgstr "在陆地村庄里只能拥有50%的闪避率"
 
 #. [trait]: id=weak
 #: data/core/macros/traits.cfg:208
@@ -4610,11 +4612,11 @@ msgstr ""
 "\n"
 "<header>text='社会'</header>\n"
 "龙人是一个相对好战的种族，他们的社会可以准确地称为教化后的军事社会。龙人部落"
-"的核心由一小群经验丰富的老兵组成，他们的首脑与他们相互尊重——或者只是相互畏惧"
-"——这是一位用铁腕统治着龙人社会的领袖。龙人成员必须在这个严格的层级体系中争取"
-"自己的地位，服从上级，指挥下属。进入精英统治阶层的唯一可能性是单挑上级并取得"
-"胜利，这也是精英们内部层级体系的建立方法。针对龙人同胞的任何形式的欺骗，都毫"
-"无例外地被视为懦弱与不可接受的。\n"
+"的核心由一小群经验丰富的老兵组成，并由一位与他们相互尊重的——或者只是相互畏惧"
+"的——<ref>dst='dominant' text='统御者'</ref>来领导，他用铁腕统治着龙人社会。龙"
+"人成员必须在这个严格的层级体系中争取自己的地位，服从上级，指挥下属。进入精英"
+"统治阶层的唯一可能性是单挑上级并取得胜利，这也是精英们内部层级体系的建立方"
+"法。针对龙人同胞的任何形式的欺骗，都毫无例外地被视为懦弱而不可接受的。\n"
 "\n"
 "虽然龙人好战的天性和对领土的敏感使得他们野蛮地捍卫自己的领地，但他们很少会入"
 "侵已经被其他主要种族占据的区域。相反，他们会在无人居住的地区定居，并建立自己"
@@ -4628,10 +4630,12 @@ msgstr ""
 "具侵略性而鲁莽，也许是为了奠定自己在部族的英雄传说中的地位吧。\n"
 "\n"
 "<header>text='地理'</header>\n"
-"龙人发源于大洋上的一片火山岛链。人口压力和岛屿沉降使得他们的殖民地遍布于整个"
-"大陆。龙人倾向于把他们的家安在火山附近的山洞中，以保护他们的蛋、幼崽以及铸造"
-"场。尽管龙人天生就喜欢温暖，但即使是在相对寒冷的气候里，他们体内的火焰也足以"
-"维持生命了。这一特点使得他们甚至能够在大陆极北的一些山脉里居住。"
+"龙人发源于<ref>dst='great_ocean' text='大洋'</ref>上的一片称为"
+"<ref>dst='morogor' text='莫罗戈'</ref>的火山岛链。人口压力和岛屿沉降使得他们"
+"的殖民地遍布于整个<ref>dst='great_continent' text='大陆'</ref>。龙人倾向于把"
+"他们的家安在火山附近的山洞中，以保护他们的蛋、幼崽以及铸造场。尽管龙人天生就"
+"喜欢温暖，但即使是在相对寒冷的气候里，他们体内的火焰也足以维持生命了。这一特"
+"点使得他们甚至能够在大陆极北的一些山脉里居住。"
 
 #. [race]: id=dwarf
 #: data/core/units.cfg:90
@@ -5539,7 +5543,7 @@ msgstr "地形"
 
 #: src/help.cpp:1575
 msgid "Defense"
-msgstr "防御率"
+msgstr "闪避率"
 
 #: src/help.cpp:1576
 msgid "Movement Cost"
