--- a/po/wesnoth-units/zh_CN.po
+++ b/po/wesnoth-units/zh_CN.po
@@ -2574,7 +2574,7 @@ msgstr "大法师"
 #. [unit_type]: id=Elder Mage, race=human
 #: data/core/units/humans/Mage_Elder.cfg:4
 msgid "Elder Mage"
-msgstr "长老法师"
+msgstr "老法师"
 
 #. [unit_type]: id=Elder Mage, race=human
 #: data/core/units/humans/Mage_Elder.cfg:23
@@ -2583,8 +2583,8 @@ msgid ""
 "wearying years of battle. Nevertheless they remain feared on the battlefield "
 "on account of their powerful lightning bolts."
 msgstr ""
-"长老法师们曾经无比强大的力量在多年令人厌倦的战斗中有所退步了。但即使如此，他"
-"们在战场上仍然由于强力的闪电术而被对手所畏惧。"
+"老法师们曾经无比强大的力量在多年令人厌倦的战斗中有所退步了。但即使如此，他们"
+"在战场上仍然由于强力的闪电术而被对手所畏惧。"
 
 #. [attack]: type=fire
 #: data/core/units/humans/Mage_Elder.cfg:35
