--- a/po/wesnoth/zh_CN.po
+++ b/po/wesnoth/zh_CN.po
@@ -14,7 +14,7 @@ msgstr ""
 "Project-Id-Version: wesnoth-1.10\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-12-19 15:14+0100\n"
-"PO-Revision-Date: 2011-12-20 19:43+0800\n"
+"PO-Revision-Date: 2011-12-30 18:55+0800\n"
 "Last-Translator: CloudiDust <cloudidust@gmail.com>\n"
 "Language-Team: Chinese Simplified <http://code.google.com/p/wesnoth-"
 "translation-cn>\n"
@@ -171,92 +171,92 @@ msgstr "游戏杆支持"
 #. [advanced_preference]: type=int
 #: data/advanced_preferences.cfg:173
 msgid "Joystick: number of the scroll X-axis joystick"
-msgstr ""
+msgstr "手柄：用于横向卷屏的手柄编号"
 
 #. [advanced_preference]: type=int
 #: data/advanced_preferences.cfg:183
 msgid "Joystick: number of the scroll X-axis"
-msgstr ""
+msgstr "手柄：用于横向卷屏的摇杆编号"
 
 #. [advanced_preference]: type=int
 #: data/advanced_preferences.cfg:193
 msgid "Joystick: number of the scroll Y-axis joystick"
-msgstr ""
+msgstr "手柄：用于纵向卷屏的手柄编号"
 
 #. [advanced_preference]: type=int
 #: data/advanced_preferences.cfg:203
 msgid "Joystick: number of the scroll Y-axis"
-msgstr ""
+msgstr "手柄：用于纵向卷屏的摇杆编号"
 
 #. [advanced_preference]: type=int
 #: data/advanced_preferences.cfg:213
 msgid "Joystick: deadzone of the scrolling stick"
-msgstr ""
+msgstr "手柄：用于卷屏的摇杆的死区大小"
 
 #. [advanced_preference]: type=int
 #: data/advanced_preferences.cfg:223
 msgid "Joystick: number of the cursor X-axis joystick"
-msgstr ""
+msgstr "手柄：用于横向移动光标的手柄编号"
 
 #. [advanced_preference]: type=int
 #: data/advanced_preferences.cfg:233
 msgid "Joystick: number of the cursor X-axis"
-msgstr ""
+msgstr "手柄：用于横向移动光标的摇杆编号"
 
 #. [advanced_preference]: type=int
 #: data/advanced_preferences.cfg:243
 msgid "Joystick: number of the cursor Y-axis joystick"
-msgstr ""
+msgstr "手柄：用于纵向移动光标的手柄编号"
 
 #. [advanced_preference]: type=int
 #: data/advanced_preferences.cfg:253
 msgid "Joystick: number of the cursor Y-axis"
-msgstr ""
+msgstr "手柄：用于纵向移动光标的摇杆编号"
 
 #. [advanced_preference]: type=int
 #: data/advanced_preferences.cfg:263
 msgid "Joystick: deadzone of the cursor stick"
-msgstr ""
+msgstr "手柄：用于移动光标的摇杆的死区大小"
 
 #. [advanced_preference]: type=int
 #: data/advanced_preferences.cfg:273
 msgid "Joystick: number of the mouse X-axis joystick"
-msgstr ""
+msgstr "手柄：用于横向移动鼠标箭头的手柄编号"
 
 #. [advanced_preference]: type=int
 #: data/advanced_preferences.cfg:283
 msgid "Joystick: number of the mouse X-axis"
-msgstr ""
+msgstr "手柄：用于横向移动鼠标箭头的摇杆编号"
 
 #. [advanced_preference]: type=int
 #: data/advanced_preferences.cfg:293
 msgid "Joystick: number of the mouse Y-axis joystick"
-msgstr ""
+msgstr "手柄：用于纵向移动鼠标箭头的手柄编号"
 
 #. [advanced_preference]: type=int
 #: data/advanced_preferences.cfg:303
 msgid "Joystick: number of the mouse Y-axis"
-msgstr ""
+msgstr "手柄：用于纵向移动鼠标箭头的摇杆编号"
 
 #. [advanced_preference]: type=int
 #: data/advanced_preferences.cfg:313
 msgid "Joystick: deadzone of the mouse stick"
-msgstr ""
+msgstr "手柄：用于移动鼠标箭头的摇杆的死区大小"
 
 #. [advanced_preference]: type=int
 #: data/advanced_preferences.cfg:323
 msgid "Joystick: number of the thrust axis joystick"
-msgstr ""
+msgstr "手柄：用于加速的手柄编号"
 
 #. [advanced_preference]: type=int
 #: data/advanced_preferences.cfg:333
 msgid "Joystick: number of the thrust axis"
-msgstr ""
+msgstr "手柄：用于加速的摇杆编号"
 
 #. [advanced_preference]: type=int
 #: data/advanced_preferences.cfg:343
 msgid "Joystick: deadzone of the thruster"
-msgstr ""
+msgstr "手柄：用于加速的摇杆的死区大小"
 
 #. [ai]: id=testing_ai_default
 #: data/ai/ais/testing_ai_default.cfg:5
@@ -2434,7 +2434,7 @@ msgstr ""
 #. [tip]
 #: data/hardwired/tips.cfg:5 data/hardwired/tips.cfg:137
 msgid "<i>― Great Mage Delfador, 516YW</i>"
-msgstr "<i>——大法师黎伐多，韦元516年</i>"
+msgstr "<i>——大法师德法多，韦元516年</i>"
 
 #. [tip]
 #: data/hardwired/tips.cfg:8
@@ -2498,7 +2498,7 @@ msgstr ""
 #. [tip]
 #: data/hardwired/tips.cfg:17 data/hardwired/tips.cfg:129
 msgid "<i>― Memoirs of Gweddry, 627YW</i>"
-msgstr "<i>——格温德利的回忆录，韦元627年<i>"
+msgstr "<i>——格温德利的回忆录，韦元627年</i>"
 
 #. [tip]
 #: data/hardwired/tips.cfg:20
@@ -2509,7 +2509,8 @@ msgid ""
 "earlier."
 msgstr ""
 "鼠标右键点击城堡地块就可以使用<b>征募</b>和<b>召回</b>命令。这样您就可以选择"
-"将新单位放置在哪个格子里。明智地摆放单位有时可以让您提前一回合到达某个村庄。"
+"将新单位放置在哪个六角格里。明智地摆放单位有时可以让您提前一回合到达某个村"
+"庄。"
 
 #. [tip]
 #: data/hardwired/tips.cfg:24
@@ -2637,7 +2638,7 @@ msgid ""
 "the screen."
 msgstr ""
 "您的单位所占据的地形是决定他们被命中的几率的重要因素。当前所选定单位所在地形"
-"对其防御的影响会在屏幕的右上角显示。"
+"对其闪避能力的影响会在屏幕的右上角显示。"
 
 #. [tip]
 #: data/hardwired/tips.cfg:64
@@ -2649,7 +2650,7 @@ msgid ""
 "a village or next to a unit with the <i>Cures</i> ability."
 msgstr ""
 "中毒的单位每回合会损失8点生命值，直到他们剩下1点生命值为止。如果毒性不解除，"
-"那他们将一直停留在鬼门关。治疗师可以避免毒性恶化，但是除非中毒单位有再生能"
+"那他们将一直停留在鬼门关。疗伤者可以避免毒性恶化，但是除非中毒单位有再生能"
 "力，或者在回合开始时处于村庄里，或者在拥有<i>治愈</i>技能的单位旁边，否则毒性"
 "不会解除。"
 
@@ -2672,9 +2673,9 @@ msgid ""
 "between them and still create a barrier to the enemy. Beware, though: "
 "skirmishers can pass through these gaps."
 msgstr ""
-"一级或级别更高的单位旁边的六个格子是他们的<i>控制区域</i>。如果单位移动到了敌"
-"人的控制区域，它在本回合将不能再移动。这意味着单位之间即使有两个空格也仍然能"
-"困住敌人。不过请当心：游击士可以通过这些空隙。"
+"一级或级别更高的单位旁边的六个六角格是他们的<i>控制区域</i>。如果单位移动到了"
+"敌人的控制区域，它在本回合将不能再移动。这意味着单位之间即使有两个空格也仍然"
+"能困住敌人。不过请当心：游击士可以通过这些空隙。"
 
 #. [tip]
 #: data/hardwired/tips.cfg:76
@@ -2685,14 +2686,14 @@ msgid ""
 "are guaranteed at least a 60% chance of a hit when they attack on their own "
 "turn."
 msgstr ""
-"命中单位的几率通常取决于这个单位在它所在的地形上能够多有效地进行防御。不过，"
-"魔法攻击总是有70%的命中率，而拥有<i>精准</i>技能的单位在其回合内进攻时，也能"
-"保证至少有60%的命中率。"
+"命中单位的几率通常取决于这个单位在它所处的地形上能够多有效地进行闪避。不过，"
+"魔法攻击总是有70%的命中率，而拥有<i>精准</i>技能的单位在自己的行动回合中发起"
+"进攻时，也能保证至少有60%的命中率。"
 
 #. [tip]
 #: data/hardwired/tips.cfg:77
 msgid "<i>― Haldric II, 43YW, Handbook of Tactical Analysis: Volume II</i>"
-msgstr "<i>——《战术分析手册》第一卷，哈德里克二世，韦元42年</i>"
+msgstr "<i>——《战术分析手册》第二卷，哈德里克二世，韦元42年</i>"
 
 #. [tip]
 #: data/hardwired/tips.cfg:80
@@ -2731,8 +2732,8 @@ msgid ""
 "terrain types, while most mounted units do not gain any defensive advantages "
 "from villages or castles."
 msgstr ""
-"大多数步兵单位在村庄和城堡中的防御要好于其它地形，而大多数骑兵在城堡和村庄中"
-"则不会有防御加成。"
+"大多数步兵单位在村庄和城堡中的闪避率要好于其它地形，而大多数骑兵在城堡和村庄"
+"中则不会有闪避方面的优势。"
 
 #. [tip]
 #: data/hardwired/tips.cfg:93 data/hardwired/tips.cfg:173
@@ -2852,7 +2853,7 @@ msgid ""
 "village."
 msgstr ""
 "尽量避免将单位移动到无人驻守的村庄旁边。敌方单位可能会移动到村庄里，在享受村"
-"庄带给它的防御和治疗优势的同时攻击您的单位。"
+"庄带给它的闪避和治疗优势的同时攻击您的单位。"
 
 #. [tip]
 #: data/hardwired/tips.cfg:140
@@ -2890,7 +2891,7 @@ msgstr "通过将鼠标移动到敌方单位之上，您将可以看到他们究
 msgid ""
 "Use healers to support your attacks — they will win you battles without "
 "needing to attack anything themselves."
-msgstr "用治疗师来支援您的进攻——他们不需要亲手攻击任何东西，就可以帮助您获胜。"
+msgstr "用疗伤者来支援您的进攻——他们不需要亲手攻击任何东西，就可以帮助您获胜。"
 
 #. [tip]
 #: data/hardwired/tips.cfg:157 data/hardwired/tips.cfg:205
@@ -2975,9 +2976,9 @@ msgid ""
 "the <b>Delay Shroud Updates</b> option when you need to move units while "
 "retaining the ability to undo, or use the new Whiteboard planning tool."
 msgstr ""
-"如果某次移动揭开了迷雾或者黑幕之下的地图格子，那么该移动就不能被撤销。如果您"
-"想在移动单位的同时保留撤销的能力，可以开启<b>暂缓更新黑幕</b>选项，或者使用全"
-"新的白板计划工具。"
+"如果某次移动揭开了迷雾或者黑幕之下的地图六角格，那么该移动就不能被撤销。如果"
+"您想在移动单位的同时保留撤销的能力，可以开启<b>暂缓更新黑幕</b>选项，或者使用"
+"全新的白板计划工具。"
 
 #. [tip]
 #: data/hardwired/tips.cfg:192
@@ -2985,8 +2986,7 @@ msgid ""
 "If an enemy benefits more from a rare terrain type than you do, occupying "
 "that terrain will deprive them of its benefits."
 msgstr ""
-"如果敌人在一个稀有地形上获得的防御加成比您更好，那么占领该地形可以避免他们获"
-"益。"
+"如果敌人在某种稀有地形上的闪避率比您的更好，那么占领该地形可以避免他们获益。"
 
 #. [tip]
 #: data/hardwired/tips.cfg:196
@@ -2995,8 +2995,9 @@ msgid ""
 "a river can inflict heavy casualties. Elves can use the edge of a forest in "
 "a similar manner, and dwarves can do the same with mountains."
 msgstr ""
-"几乎没有什么单位在水中具有很好的防御；沿岸排成一条线的进攻者可以造成重大的伤"
-"亡。精灵可以用类似的方法来利用森林的边界，而矮人们则可以照此方法来利用山脉。"
+"几乎没有什么单位在水中具有很好的闪避；沿岸排成一条线的进攻部队可以造成重大的"
+"伤亡。精灵可以用类似的方法来利用森林的边界，而矮人们则可以照此方法来利用山"
+"脉。"
 
 #. [tip]
 #: data/hardwired/tips.cfg:200
@@ -3017,10 +3018,10 @@ msgid ""
 "to escape; slow enemies are almost immobilized, and your own units suffer "
 "less retaliation damage, so it’s quicker to heal them."
 msgstr ""
-"<i>减速</i>技能非常强力，这是由于其具有多样的效果。敌方亡灵的<i>吸血</>技能的"
-"效果会减半，<i>冲锋</>和<i>背刺</>的伤害加成会无效化，而<i>狂暴</i>技能也会被"
-"削弱。速度快的对手将疲于逃命，而速度慢的敌人则几乎会被钉死在原地。同时，你自"
-"己的单位所受到的反击伤害则会减轻，于是便可以更快地为他们疗伤。"
+"<i>减速</i>技能非常强力，这是由于其具有多样的效果。敌方亡灵的<i>吸血</i>技能"
+"的效果会减半，<i>冲锋</i>和<i>背刺</i>的伤害加成会无效化，而<i>狂暴</i>技能也"
+"会被削弱。速度快的对手将疲于逃命，而速度慢的敌人则几乎会被钉死在原地。同时，"
+"你自己的单位所受到的反击伤害则会减轻，于是便可以更快地为他们疗伤。"
 
 #. [tip]
 #: data/hardwired/tips.cfg:208
@@ -3080,7 +3081,7 @@ msgid ""
 "<i>Charge</i> against a slowed opponent, the results can be impressive."
 msgstr ""
 "将多种特殊技能组合起来运用将是致命的。例如，尽管要把<i>领导</i>，<i>照明</i>"
-"和<i>冲锋</>组合起来是得花点工夫，但其效果实在会让人印象深刻。"
+"和<i>冲锋</i>组合起来是得花点工夫，但其效果实在会让人印象深刻。"
 
 #. [tip]
 #: data/hardwired/tips.cfg:228
@@ -3103,9 +3104,9 @@ msgid ""
 "average. Plan for heavy losses, and take firm control of any hex where the "
 "land does favor you."
 msgstr ""
-"如果您的军队在地图上各处的防御都很弱，那就占据那些让敌人也同样有防御劣势的区"
-"域。避免占据您的防御很糟糕而敌人的防御只是一般的地方。做好遭受重大损失的准"
-"备，同时也要牢牢控制住那些会为您提供优势的地形。"
+"如果您的军队在地图上各处的闪避能力都很弱，那就占据那些让敌人也有同样劣势的区"
+"域。避免占据您的闪避率很糟糕而敌人的闪避率只是一般的地方。做好遭受重大损失的"
+"准备，同时也要牢牢控制住那些会为您提供优势的地形。"
 
 #. [tip]
 #: data/hardwired/tips.cfg:237
@@ -3114,8 +3115,8 @@ msgid ""
 "if they occupy a village hex, they do not gain any defensive benefits from "
 "the village, although they will still be healed."
 msgstr ""
-"<i>野生</i>单位——例如蝙蝠和野生动物——会避开村庄。就算它们占据了一个村庄格子，"
-"也不能够得到村庄带来的任何防御加成，虽然说它们仍然会得到治疗。"
+"<i>野生</i>单位——例如蝙蝠和野生动物——会避开村庄。就算它们占据了一个村庄六角"
+"格，也不能够得到村庄带来的任何闪避率加成，虽然说它们仍然会得到治疗。"
 
 #: data/lua/wml-tags.lua:828 src/actions.cpp:1492
 msgid "female^poisoned"
@@ -3292,7 +3293,7 @@ msgstr "移动点数"
 #: data/themes/default.cfg:470 data/themes/experimental.cfg:415
 #: data/themes/widescreen.cfg:541 data/themes/widescreen.cfg:668
 msgid "statuspanel^terrain def."
-msgstr "地形防御加成"
+msgstr "闪避率"
 
 #. [label]: id=label-mp
 #: data/themes/dfool.cfg:258
@@ -3404,7 +3405,7 @@ msgstr "选中了无效的攻击武器。"
 
 #: src/actions.cpp:754
 msgid "An invalid defender weapon got selected."
-msgstr "所选防御武器无效"
+msgstr "所选防御武器无效。"
 
 #: src/actions.cpp:2715
 msgid "Ambushed!"
@@ -3429,14 +3430,14 @@ msgstr[1] "发现$enemies个敌军单位！"
 #: src/actions.cpp:2775
 msgid "Part of 'Units sighted! (...)' sentence^1 friendly"
 msgid_plural "$friends friendly"
-msgstr[0] "1个友军"
-msgstr[1] "$friends个友军"
+msgstr[0] "1 个友军"
+msgstr[1] "$friends 个友军"
 
 #: src/actions.cpp:2776
 msgid "Part of 'Units sighted! (...)' sentence^1 enemy"
 msgid_plural "$enemies enemy"
-msgstr[0] "1个敌军"
-msgstr[1] "$enemies个敌军"
+msgstr[0] "1 个敌军"
+msgstr[1] "$enemies 个敌军"
 
 #: src/actions.cpp:2777
 msgid "Units sighted! ($friendphrase, $enemyphrase)"
@@ -3786,11 +3787,11 @@ msgstr[0] "下列附加组件已成功删除："
 
 #: src/attack_prediction_display.cpp:105 src/attack_prediction_display.cpp:237
 msgid "Attacker"
-msgstr "进攻者"
+msgstr "进攻方"
 
 #: src/attack_prediction_display.cpp:106 src/attack_prediction_display.cpp:236
 msgid "Defender"
-msgstr "防御者"
+msgstr "防御方"
 
 #: src/attack_prediction_display.cpp:124
 msgid "Expected Battle Result (HP)"
@@ -4263,7 +4264,7 @@ msgid ""
 "No valid castle location found. Too many or too few mountain hexes? (please "
 "check the 'max hill size' parameter)"
 msgstr ""
-"未找到合法的城堡位置。是不是因为山脉格子太多或者太少了？（请检查“最大丘陵尺"
+"未找到合法的城堡位置。是不是因为山脉六角格太多或者太少了？（请检查“最大丘陵尺"
 "寸”参数）"
 
 #: src/menu_events.cpp:100 src/menu_events.cpp:103 src/menu_events.cpp:107
@@ -6051,7 +6052,7 @@ msgstr "最小："
 
 #: src/reports.cpp:516
 msgid "Defense: "
-msgstr "防御率："
+msgstr "闪避率："
 
 #: src/reports.cpp:599 src/reports.cpp:789 src/reports.cpp:801
 msgid "Weapon: "
@@ -6079,7 +6080,7 @@ msgstr "减速： "
 
 #: src/reports.cpp:618
 msgid "Attacks: "
-msgstr "进攻者："
+msgstr "进攻方："
 
 #: src/reports.cpp:620
 msgid "Base attacks: "
