--- a/po/wesnoth-manual/zh_CN.po
+++ b/po/wesnoth-manual/zh_CN.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: wesnoth-1.10\n"
 "POT-Creation-Date: 2011-12-19 15:13+0100\n"
-"PO-Revision-Date: 2011-11-14 21:58+0800\n"
+"PO-Revision-Date: 2011-12-30 18:42+0800\n"
 "Last-Translator: CloudiDust <cloudidust@gmail.com>\n"
 "Language-Team: Chinese Simplified <http://code.google.com/p/wesnoth-"
 "translation-cn>\n"
@@ -267,8 +267,8 @@ msgid ""
 msgstr ""
 "教程是一个真实但很基础的游戏场景，主要是教您游戏的一些基本操作。输赢在此并不"
 "重要，但学会如何操作很重要。点击教程按钮就可以玩教程模式。在教程里，您扮演小"
-"王子科纳德或者小公主莉莎，向长老法师黎伐多学习——好好听讲，要不他说不定会把您"
-"变成小虫子。"
+"王子科纳德或者小公主莉莎，向老法师德法多学习——好好听讲，要不他说不定会把您变"
+"成小虫子。"
 
 #. type: Content of: <book><chapter><section><variablelist><varlistentry><term>
 #: /src/wesnoth/doc/manual/manual.en.xml:114
@@ -821,17 +821,17 @@ msgstr "当前时间或者剩余时间（在限时多人游戏中）"
 #. type: Content of: <book><chapter><section><section><orderedlist><listitem><simpara>
 #: /src/wesnoth/doc/manual/manual.en.xml:456
 msgid "Current hex position (x-coordinate, y-coordinate)"
-msgstr "当前格子的位置（x坐标，y坐标）"
+msgstr "当前六角格的位置（x坐标，y坐标）"
 
 #. type: Content of: <book><chapter><section><section><orderedlist><listitem><simpara>
 #: /src/wesnoth/doc/manual/manual.en.xml:461
 msgid "Defense and movement of the currently selected unit on the marked hex"
-msgstr "当前选择的单位在所指格子上的防御值和移动点数"
+msgstr "当前选择的单位在所指六角格上的闪避率和移动点数"
 
 #. type: Content of: <book><chapter><section><section><orderedlist><listitem><simpara>
 #: /src/wesnoth/doc/manual/manual.en.xml:466
 msgid "Current hex type"
-msgstr "当前格子的类型"
+msgstr "当前六角格的类型"
 
 #. type: Content of: <book><chapter><section><section><simpara><inlinemediaobject>
 #: /src/wesnoth/doc/manual/manual.en.xml:471
@@ -891,10 +891,10 @@ msgid ""
 "start to build your army to conquer the enemy."
 msgstr ""
 "在场景或者战役刚开始的时候您只拥有少量的单位。其中之一是指挥官（有小皇冠标"
-"记）。开始时指挥官通常在城堡中的一个特殊格子上，称为主楼。只要当您的指挥官站"
-"在主楼上（不单是您自己的主楼，也可以是您所占领的任何一个敌军城堡的主楼）并且"
-"有足够金币时，您就可以为您的军队征募单位。在之后的场景中您可以召回在先前场景"
-"中存活的富有经验的单位。以此为开端，您就可以开始建立您的军队并征服敌人了。"
+"记）。开始时指挥官通常在城堡中的一个特殊六角格上，称为主楼。只要当您的指挥官"
+"站在主楼上（不单是您自己的主楼，也可以是您所占领的任何一个敌军城堡的主楼）并"
+"且有足够金币时，您就可以为您的军队征募单位。在之后的场景中您可以召回在先前场"
+"景中存活的富有经验的单位。以此为开端，您就可以开始建立您的军队并征服敌人了。"
 
 #. type: Content of: <book><chapter><section><section><simpara>
 #: /src/wesnoth/doc/manual/manual.en.xml:510
@@ -2350,7 +2350,7 @@ msgid ""
 msgstr ""
 "坚韧单位有额外的4点生命值，且每升一级增加的生命值也多1点。坚韧单位在战役的整"
 "个阶段中都非常有用，并且这是一个对所有单位都有用的特质。坚韧特质对拥有较低的"
-"生命值、较高的防御能力或较高抗性的单位特别有帮助。坚韧单位在把守战略要害部位"
+"生命值、较高的闪避能力或较高抗性的单位特别有帮助。坚韧单位在把守战略要害部位"
 "方面尤其有用。"
 
 #. type: Content of: <book><chapter><section><section><variablelist><varlistentry><term>
@@ -2582,7 +2582,7 @@ msgstr "魔法"
 msgid ""
 "This attack always has a 70% chance to hit regardless of the defensive "
 "ability of the unit being attacked."
-msgstr "本攻击无视被攻击单位的防御能力，而总是具有70%的击中率。"
+msgstr "本攻击无视被攻击单位的闪避能力，而总是具有70%的击中率。"
 
 #. type: Content of: <book><chapter><section><section><variablelist><varlistentry><term>
 #: /src/wesnoth/doc/manual/manual.en.xml:1854
@@ -2751,8 +2751,8 @@ msgid ""
 msgstr ""
 "允许该单位在每回合开始时治疗相邻区域内受伤的友军单位。接受治疗的单位每回合回"
 "血4点或者中毒效果该回合不减血。中毒单位不能被该技能治愈，必须到村庄或者具有治"
-"愈技能的单位旁边。本治疗者所治疗的单位每回合最多能恢复4点生命值，或阻止毒药在"
-"该回合发作。中毒的单位不能由治疗者解毒，只有进入村庄或者被拥有治愈能力的单位"
+"愈技能的单位旁边。本疗伤者所治疗的单位每回合最多能恢复4点生命值，或阻止毒药在"
+"该回合发作。中毒的单位不能由疗伤者解毒，只有进入村庄或者被拥有治愈能力的单位"
 "治疗。"
 
 #. type: Content of: <book><chapter><section><section><variablelist><varlistentry><term>
@@ -2769,9 +2769,9 @@ msgid ""
 "that turn.  A poisoned unit cannot be cured of its poison by a healer, and "
 "must seek the care of a village or a unit that can cure."
 msgstr ""
-"本单位将魔法与草药混合使用以在战场上治疗单位，比通常可能的速度快得多。本治疗"
+"本单位将魔法与草药混合使用以在战场上治疗单位，比通常可能的速度快得多。本疗伤"
 "者所治疗的单位每回合最多能恢复8点生命值，或阻止毒药在该回合发作。中毒的单位不"
-"能由治疗者解毒，只有进入村庄或者被拥有治愈能力的单位治疗。"
+"能由疗伤者解毒，只有进入村庄或者被拥有治愈能力的单位治疗。"
 
 #. type: Content of: <book><chapter><section><section><variablelist><varlistentry><term>
 #: /src/wesnoth/doc/manual/manual.en.xml:2001
@@ -3004,13 +3004,13 @@ msgid ""
 msgstr ""
 "单击一个单位将显示出它本回合可以移动到的所有位置，而不能移动到的位置将变暗"
 "（按数字键2－7可以用类似的方式显示出对应回合数可以移动到的位置）。在这种模式"
-"下，把光标移到某一格子上会出现您的单位移动要到这一格所经过的路径，此外还有关"
-"于您的单位在此格子上的防御加成的附加信息。此外，如果单位到达该格需要一个以上"
-"的回合时，也将显示出需要消耗的回合数。如果您不想移动本单位，可以通过选择其他"
-"单位（单击新单位，或者使用<literal>n</literal>/<literal>N</literal>键），或者"
-"在地图上任何位置单击鼠标右键（在Mac上是按住Command并点击鼠标）以取消本模式。"
-"单位能量条顶部的<link linkend=\"orbs\">行动状态球</link>为您提供了一种快捷的"
-"方法，以查看在本回合中哪些单位已经移动过了，而哪些还可以继续移动。"
+"下，把光标移到某一六角格上会出现您的单位移动要到这一格所经过的路径，此外还有"
+"关于您的单位在此六角格上的闪避率的附加信息。此外，如果单位到达该格需要一个以"
+"上的回合时，也将显示出需要消耗的回合数。如果您不想移动本单位，可以通过选择其"
+"他单位（单击新单位，或者使用<literal>n</literal>/<literal>N</literal>键），或"
+"者在地图上任何位置单击鼠标右键（在Mac上是按住Command并点击鼠标）以取消本模"
+"式。单位能量条顶部的<link linkend=\"orbs\">行动状态球</link>为您提供了一种快"
+"捷的方法，以查看在本回合中哪些单位已经移动过了，而哪些还可以继续移动。"
 
 #. type: Content of: <book><chapter><section><simpara>
 #: /src/wesnoth/doc/manual/manual.en.xml:2236
@@ -3025,13 +3025,13 @@ msgid ""
 "by selecting that unit and choosing a new destination or clicking the unit "
 "again to cancel the <emphasis>goto</emphasis>."
 msgstr ""
-"如果您要移动所选单位，只需单击要移动到的格子，您的单位就会向着那个空格移动。"
-"如果所选的目的地在本回合内无法到达，则在本回合中单位会移动到离目的地尽可能近"
-"的地方，并进入<emphasis>自动移动模式</emphasis>。在<emphasis>自动移动模式</"
-"emphasis>下，您的单位在接下来的几个回合会自动移动到指定的地点。在您的下一回合"
-"开始的时候，您可以很容易地撤销单位的自动移动。您也可以通过选择该单位，并重新"
-"选择一个新的目的地来改变其目的地，或者也可以通过再次点击单位来取消<emphasis>"
-"自动移动模式</emphasis>。"
+"如果您要移动所选单位，只需单击要移动到的六角格，您的单位就会向着那个空格移"
+"动。如果所选的目的地在本回合内无法到达，则在本回合中单位会移动到离目的地尽可"
+"能近的地方，并进入<emphasis>自动移动模式</emphasis>。在<emphasis>自动移动模式"
+"</emphasis>下，您的单位在接下来的几个回合会自动移动到指定的地点。在您的下一回"
+"合开始的时候，您可以很容易地撤销单位的自动移动。您也可以通过选择该单位，并重"
+"新选择一个新的目的地来改变其目的地，或者也可以通过再次点击单位来取消"
+"<emphasis>自动移动模式</emphasis>。"
 
 #. type: Content of: <book><chapter><section><simpara>
 #: /src/wesnoth/doc/manual/manual.en.xml:2245
@@ -3049,9 +3049,9 @@ msgid ""
 "reflected in both the path that is displayed for your unit and the hexes it "
 "may move to on the current turn."
 msgstr ""
-"绝大多数的单位都会产生一个“控制区域”，该区域会影响您的单位所能到达的格子与他"
-"所选择的路径。这些限制将自动地反映在移动单位时显示的路径和他在当前回合所能到"
-"达的格子上。"
+"绝大多数的单位都会产生一个“控制区域”，该区域会影响您的单位所能到达的六角格与"
+"他所选择的路径。这些限制将自动地反映在移动单位时显示的路径和他在当前回合所能"
+"到达的六角格上。"
 
 #. type: Content of: <book><chapter><section><section><title>
 #: /src/wesnoth/doc/manual/manual.en.xml:2252
@@ -3068,10 +3068,10 @@ msgid ""
 "units are considered too feeble to generate a zone of control and all units "
 "are able to move through the hexes around an enemy level 0 unit freely."
 msgstr ""
-"一个单位的控制区域延伸到和他紧邻的六个格子中。移动到敌方单位控制区域的单位会"
-"被迫停下来。拥有游击能力的单位忽略敌方的控制区域，他们可以轻松穿越这些区域而"
-"不会被迫停下。0级单位由于太弱，所以不能生成控制区域。所有单位都可以在敌方0级"
-"单位的四周自由穿行。"
+"一个单位的控制区域延伸到和他紧邻的六个六角格中。移动到敌方单位控制区域的单位"
+"会被迫停下来。拥有游击能力的单位忽略敌方的控制区域，他们可以轻松穿越这些区域"
+"而不会被迫停下。0级单位由于太弱，所以不能生成控制区域。所有单位都可以在敌方0"
+"级单位的四周自由穿行。"
 
 #. type: Content of: <book><chapter><section><section><table><title>
 #: /src/wesnoth/doc/manual/manual.en.xml:2262
@@ -3306,9 +3306,9 @@ msgid ""
 "as shown over the terrain hex."
 msgstr ""
 "每个单位被击中的几率取决于他所在的地形。比如：在城堡和村庄里面单位被击中的几"
-"率比较低，精灵们在森林里被击中的几率比较低。要查看单位在特定地形上的防御值"
-"（不被击中的几率），请单击单位，然后将鼠标移动您感兴趣的地形上，防御值就会在"
-"状态栏中以百分比的形式显示出来，在所指地形格中也有显示。"
+"率比较低，精灵们在森林里被击中的几率比较低。要查看单位在特定地形上的闪避率"
+"（也就是不被击中的几率），请单击单位，然后将鼠标移动您感兴趣的地形上，闪避率"
+"就会在状态栏中以百分比的形式显示出来，在所指地形格中也有显示。"
 
 #. type: Content of: <book><chapter><section><simpara>
 #: /src/wesnoth/doc/manual/manual.en.xml:2415
@@ -3317,7 +3317,7 @@ msgid ""
 "attacker and defender will be killed, by clicking on the \"Damage "
 "Calculations\" button in the fight window."
 msgstr ""
-"通过点击战斗窗口中的“伤害计算”按钮，可以获取包括进攻者和防御者被杀死的几率在"
+"通过点击战斗窗口中的“伤害计算”按钮，可以获取包括进攻方和防御方被杀死的几率在"
 "内的更多信息。"
 
 #. type: Content of: <book><chapter><section><section><title>
@@ -3478,8 +3478,8 @@ msgid ""
 "healing unit."
 msgstr ""
 "巨魔和树人可以通过再生能力自然回复。他们如果受伤了，每回合将自动回复8点生命"
-"值。注意，因为所有单位每回合最多能通过治疗回复8点生命值，所以巨魔和树人站在村"
-"庄里或者在治疗者身边也得不到任何额外的好处。"
+"值。注意，因为所有单位每回合最多能通过治疗回复8点生命值，所以巨魔和树人进入村"
+"庄里或者站在疗伤者身边也得不到任何额外的好处。"
 
 #. type: Content of: <book><chapter><section><section><simpara>
 #: /src/wesnoth/doc/manual/manual.en.xml:2511
@@ -3518,24 +3518,24 @@ msgid ""
 "Light, Paladin) heal all wounded units around them, so you can keep units "
 "close to the battle without losing them."
 msgstr ""
-"治疗者们（精灵萨满、德鲁伊、仙子，人类白袍法师、光明法师、圣骑士）会治疗自己"
-"身边所有受伤的单位，所以在战场上保持队形紧凑可以使得您在作战的同时不会损失单"
+"疗伤者（精灵萨满、德鲁伊、仙子，人类白袍法师、光明法师、圣骑士）会治疗自己身"
+"边所有受伤的单位，所以在战场上保持队形紧凑可以使得您在作战的同时不会损失单"
 "位。"
 
 #. type: Content of: <book><chapter><section><section><itemizedlist><listitem><simpara>
 #: /src/wesnoth/doc/manual/manual.en.xml:2535
 msgid "Healers do not heal enemy units."
-msgstr "治疗者不会治疗敌方单位。（译者：……）"
+msgstr "疗伤者不会治疗敌方单位。"
 
 #. type: Content of: <book><chapter><section><section><itemizedlist><listitem><simpara>
 #: /src/wesnoth/doc/manual/manual.en.xml:2540
 msgid "Healers cannot heal themselves, but see next point."
-msgstr "治疗者不能治疗自己，但请参见下一条。"
+msgstr "疗伤者不能治疗自己，但请参见下一条。"
 
 #. type: Content of: <book><chapter><section><section><itemizedlist><listitem><simpara>
 #: /src/wesnoth/doc/manual/manual.en.xml:2545
 msgid "Use your healers in pairs, so they can heal each other if needed."
-msgstr "成对使用治疗者，这样他们可以在需要的时候互相治疗。"
+msgstr "成对使用疗伤者，这样他们可以在需要的时候互相治疗。"
 
 #. type: Content of: <book><chapter><section><section><itemizedlist><listitem><simpara>
 #: /src/wesnoth/doc/manual/manual.en.xml:2550
@@ -3543,7 +3543,7 @@ msgid ""
 "Multiple healers from different allied sides can heal the same unit and "
 "speed up healing."
 msgstr ""
-"属于同盟中的不同阵营的多个治疗者可以共同治疗一个单位，并加快单位的回复速度。 "
+"属于同盟中的不同阵营的多个疗伤者可以共同治疗一个单位，并加快单位的回复速度。 "
 
 #. type: Content of: <book><chapter><section><section><itemizedlist><listitem><simpara>
 #: /src/wesnoth/doc/manual/manual.en.xml:2556
@@ -3590,8 +3590,8 @@ msgid ""
 "useful!"
 msgstr ""
 "不要让受伤的单位去送死。一旦一个单位失去了一半以上的生命值（HP），您就应该认"
-"真考虑把他撤退到安全地点。然后或者把他驻扎在村庄里治疗，或者让治疗者（比如精"
-"灵萨满或者人类白袍法师）来治疗他。治疗者们是非常有用的！"
+"真考虑把他撤退到安全地点。而后或者把他驻扎在村庄里治疗，或者让疗伤者（比如精"
+"灵萨满或者人类白袍法师）来为他治疗。疗伤者们是非常有用的！"
 
 #. type: Content of: <book><chapter><section><section><simpara>
 #: /src/wesnoth/doc/manual/manual.en.xml:2582
@@ -3661,9 +3661,9 @@ msgid ""
 "six neighboring tiles, it is forced to halt and its movement phase ends "
 "(only enemies with the rare skirmisher ability ignore this)."
 msgstr ""
-"每个1级或1级以上的单位都会在他周围的6个格子中维持一个控制区域。这意味着当敌人"
-"移动到这6个格子中的任何一个时，就被迫停下来，并结束其移动阶段（只有拥有少见"
-"的“游击”能力的单位才能忽略控制区域的影响）。"
+"每个1级或1级以上的单位都会在他周围的6个六角格中维持一个控制区域。这意味着当敌"
+"人移动到这6个六角格中的任何一个时，就被迫停下来，并结束其移动阶段（只有拥有少"
+"见的“游击”能力的单位才能忽略控制区域的影响）。"
 
 #. type: Content of: <book><chapter><section><section><simpara>
 #: /src/wesnoth/doc/manual/manual.en.xml:2611
@@ -3694,9 +3694,9 @@ msgid ""
 "Wesnoth uses hexes, a east-to-west \"line\" is not a straight line but a zig-"
 "zag curve. The north south line and the diagonals are the \"real\" lines."
 msgstr ""
-"将许多单位排成一条线，两两紧邻，或者最多留一个格子，这就能形成一条相当牢固的"
-"防线。注意，因为韦诺是六角战旗游戏，所以东西方向的“直线”并不是直线，而是锯齿"
-"曲线。南北向上的线和对角线才是“真正的”直线。"
+"将许多单位排成一条线，两两紧邻，或者最多留一个六角格，这就能形成一条相当牢固"
+"的防线。注意，因为韦诺是六角战旗游戏，所以东西方向的“直线”并不是直线，而是锯"
+"齿曲线。南北向上的线和对角线才是“真正的”直线。"
 
 #. type: Content of: <book><chapter><section><section><simpara>
 #: /src/wesnoth/doc/manual/manual.en.xml:2626
@@ -3757,7 +3757,7 @@ msgstr ""
 #. type: Content of: <book><chapter><section><section><simpara>
 #: /src/wesnoth/doc/manual/manual.en.xml:2647
 msgid "Note that your units can pass through hexes containing your own troops."
-msgstr "注意，您的单位能穿越被己方部队占据的格子。"
+msgstr "注意，您的单位能穿越被己方部队占据的六角格。"
 
 #. type: Content of: <book><chapter><section><section><title>
 #: /src/wesnoth/doc/manual/manual.en.xml:2650
@@ -3771,8 +3771,8 @@ msgid ""
 "defense against an enemy in a hex with low terrain. That way, the "
 "enemy&#8217;s counterstrikes will be less likely to do damage."
 msgstr ""
-"尽量把您的部队布置于防御高的格子内，而让敌人处于防御低的格子内。这样一来，敌"
-"人的反击造成伤害的几率会小一些。"
+"尽量把您的部队布置于闪避率高的六角格内，而让敌人处于闪避率低的六角格内。这样"
+"一来，敌人的反击造成伤害的几率会小一些。"
 
 #. type: Content of: <book><chapter><section><section><simpara>
 #: /src/wesnoth/doc/manual/manual.en.xml:2654
@@ -3782,7 +3782,7 @@ msgid ""
 "forest defenses."
 msgstr ""
 "例如，您可以把精灵单位刚好放置在森林边上，这样进攻的兽人就必须站在草地上，而"
-"您的精灵则享受着森林地形的高防御。"
+"您的精灵则享受着森林地形的高闪避。"
 
 #. type: Content of: <book><chapter><section><section><title>
 #: /src/wesnoth/doc/manual/manual.en.xml:2659
@@ -3917,7 +3917,7 @@ msgid ""
 msgstr ""
 "通过杀死敌方单位，您的单位可以获得最多的经验值（依照被杀死单位的等级，每级8"
 "点）。所以，通常应该用高等级单位削弱敌人，然后把最后一击留给更需要经验的单"
-"位。特别地，治疗者在战斗中通常很弱，需要用这种方式<emphasis>偷人头</emphasis>"
+"位。尤其是，疗伤者在战斗中通常很弱，需要用这种方式<emphasis>偷人头</emphasis>"
 "以提升等级。"
 
 #. type: Content of: <book><chapter><section><section><simpara>
@@ -4159,7 +4159,7 @@ msgid ""
 "to heal themselves naturally."
 msgstr ""
 "要赢下战斗，保持单位的活力是很重要的一环。当单位受到伤害时，您可以通过将他们"
-"移动到村庄里或者治疗者（例如：精灵萨满和白袍法师）身边给他们治疗。其他的一些"
+"移动到村庄里或者疗伤者（例如：精灵萨满和白袍法师）身边给他们治疗。其他的一些"
 "您将会遇到的单位，例如巨魔，拥有自然回复的能力。"
 
 #. type: Content of: <book><chapter><section><section><title>
